fix: app tailer visibility

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -37,11 +37,6 @@ select
   &:focus
     background-color: $color-base-darker
 
-#mainContentWrapper
-  main
-    p.caption
-      @include TypeCaption()
-
 .viewHeader
   @include TypeHeadline3()
   color: $color-fill-primary-dark
@@ -221,9 +216,9 @@ body
   @include TypeBody1() // Default body font
   margin: 0
   padding: 0
-  background: white
   min-width: 370px
-  background-color: var(--chroma-clear)// var(--chroma-secondary-i)
+  background: none
+  background-color: var(--color-b-j)
 
 h1
   @include TypeHeadline3()
